[project]
name = "ibm-quantum-site"
version = "0.1.0"
description = "lwfm Site driver for IBM Quantum Cloud"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lwfm@git+https://github.com/lwfm-proj/lwfm@develop",
    "qiskit>=2.0",
    "qiskit-ibm-runtime"
]

[tool.black]
line-length = 88
[tool.ruff]
line-length = 88

