[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ibm_quantum_site"
version = "0.1.0"
description = "lwfm Site driver for IBM Quantum Cloud"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lwfm@git+https://github.com/lwfm-proj/lwfm",
    "qiskit>=2.0",
    "qiskit-ibm-runtime",
    "qiskit_qasm3_import",
    "qiskit_aer"
]

[tool.black]
line-length = 88
[tool.ruff]
line-length = 88
[tool.hatch.metadata]
allow-direct-references = true


